# SheryMeet

./: .env.example  .gitignore  AI_Operating_System_Roadmap_Green_Flag.md  README.md  docker-compose.yml  render.yaml  run-local.sh
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: routes_health.py  routes_jobs.py
backend/app/config/: settings.py
backend/app/core/: enums.py  exceptions.py  logging.py  metrics.py
backend/app/database/: base.py  session.py
backend/app/database/migrations/: env.py
backend/app/models/: __init__.py  action_item.py  job.py  processing_log.py  summary.py  transcript.py
backend/app/prompts/: checklist_prompt.py  summary_prompt.py
backend/app/providers/asr/: base.py  factory.py  groq_whisper.py  (+3 more)
backend/app/repositories/: action_item_repo.py  base.py  job_repo.py  processing_log_repo.py  summary_repo.py  transcript_repo.py
backend/app/schemas/: job.py  llm_output.py  result.py
backend/app/services/: audio_service.py  checklist_service.py  cleaning_service.py  job_service.py  ports.py  summary_service.py  transcription_service.py
backend/app/storage/: base.py  factory.py  local_fs.py
backend/app/utils/: audio.py  json_repair.py  retry.py
backend/app/workers/: audio_worker.py  base.py  celery_app.py  checklist_worker.py  dispatch.py  summary_worker.py  transcript_worker.py
backend/docker/: Dockerfile  entrypoint-api.sh  entrypoint-worker.sh
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_repositories.py
backend/tests/pipeline/: test_pipeline_e2e.py
backend/tests/unit/: test_audio_utils.py  test_cleaning_service.py  test_json_repair.py  test_llm_services.py  test_schemas.py
(+35 files in other folders)
