[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-intelligence-pipeline"
version = "1.0.0"
description = "Asynchronous Meeting Intelligence Pipeline (ASR + LLM) with FastAPI, Celery, Redis, Postgres."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "structlog>=24.1",
    "tenacity>=8.3,<9.0",
]

[project.optional-dependencies]
# Heavy / provider-specific extras kept optional so the base image and CI stay lean.
# `local-asr` (faster-whisper) is only needed for ASR_PROVIDER=local_whisper — it is
# NOT installed in the default Docker image. Hosted ASR (groq_whisper/openai_whisper)
# and all LLM providers use the `llm` extra (the OpenAI/Anthropic/Gemini SDKs).
local-asr = ["faster-whisper>=1.0"]
llm = ["anthropic>=0.30", "openai>=1.30", "google-generativeai>=0.7"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
